# wikipydia

./: .gitignore  .pylintrc  LICENSE.txt  Makefile  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg  wiki_requests.py  wikipydia.py
.github/.workflows/: pylint.yml  tests.yml
.github/workflows/: lint_test.yml
src/: wiki_requests.py  wikipydia.py
tests/: mock_functions.py  test_wiki_requests.py  test_wikipydia.py
