[build-system]
requires = ['setuptools>=42']
build-backend = 'setuptools.build_meta'

[project]
name = "wikipydia"
version = "0.0.2"
authors = [
  { name="@lcslitx" },
]
description = "Simple Python wrapper for Wikipedia API."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/LCSLITX/wikipydia"
Issues = "https://github.com/LCSLITX/wikipydia/issues"